[tool.poetry]
name = "utrcli"
version = "0.1.0"
description = ""
authors = ["Marc Brooks <marcwbrooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.1"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
utrcli = "utrcli.run:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
